[package]
name = "forksrv"
version = "0.1.0"
authors = ["coco <coco@hexgolems.com>", "daniel daniel.teuchert@rub.de"]

[dependencies]
nix = "0.15.0"
time = "0.1"
subprocess = "0.2.4"
regex = "1.3.7"
lazy_static = "1.4.0"
libc = "0.2.70"
quick-error = "1.2.3"
tempfile = "3.1.0"
rand = "0.7.3"
serde_derive = "1.0"
serde = "1.0"
byteorder = "1.3.4"
snafu = "0.6.8"
timeout-readwrite = "0.3.1"
