[package]
name = "forksrv"
version = "0.2.0"
authors = ["coco <coco@hexgolems.com>", "daniel daniel.teuchert@rub.de"]
description = "The Nautilus forkserver"
license = "AGPL-3.0"
repository = "https://github.com/nautilus-fuzz/nautilus"

[dependencies]
nix = "0.25"
time = "0.3"
subprocess = "0.2.4"
regex = "1.6"
lazy_static = "1.4.0"
libc = "0.2.70"
quick-error = "2.0"
tempfile = "3.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4"
snafu = "0.7"
timeout-readwrite = "0.3.1"
