[package]
name = "forksrv"
version = "0.3.1"
authors = ["coco <coco@hexgolems.com>", "daniel daniel.teuchert@rub.de"]
description = "The Nautilus forkserver"
license = "AGPL-3.0"
repository = "https://github.com/nautilus-fuzz/nautilus"

[dependencies]
nix = "0.26"
libc = "0.2"
tempfile = "3.1"
serde = { version = "1", features = ["derive"] }
byteorder = "1"
snafu = "0.7"
timeout-readwrite = "0.3"
