[package]
name = "fuzzer"
version = "0.2.0"
authors = ["coco <coco@hexgolems.com>"]
description = "The Nautilus fuzzer"
license = "AGPL-3.0"
default-run = "fuzzer"
repository = "https://github.com/nautilus-fuzz/nautilus"

[dependencies]
nix = "0.25"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
subprocess = "0.2.4"
grammartec = {path = "../grammartec", version = "0.2"}
forksrv =  {path = "../forksrv", version = "0.2"}
libc = "0.2"
# ron complains with serde version <= 1.0.102
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
argparse = "0.2.2"
ron = "0.8"
clap = "4.0"
pyo3 = "0.17"

[[bin]]
name = "fuzzer"
path = "src/main.rs"

[[bin]]
name = "generator"
path = "src/generator.rs"

[[bin]]
name = "mutator"
path = "src/mutation_tester.rs"
