[package]
name = "fuzzer"
version = "0.2.0"
authors = ["coco <coco@hexgolems.com>"]
rust-version.workspace = true
description = "The Nautilus fuzzer"
license = "AGPL-3.0"
default-run = "fuzzer"
repository = "https://github.com/nautilus-fuzz/nautilus"

[dependencies]
nix = "0.17.0"
time = "0.1"
subprocess = "0.2.4"
grammartec = {path = "../grammartec", version = "0.2"}
forksrv =  {path = "../forksrv", version = "0.2"}
libc = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
argparse = "0.2.2"
ron = "*"
clap = "3.2"
pyo3 = "0.17"

[[bin]]
name = "fuzzer"
path = "src/main.rs"

[[bin]]
name = "generator"
path = "src/generator.rs"

[[bin]]
name = "mutator"
path = "src/mutation_tester.rs"
