[package]
name = "fuzzer"
version = "0.3.0"
authors = ["coco <coco@hexgolems.com>"]
description = "The Nautilus fuzzer"
license = "AGPL-3.0"
default-run = "fuzzer"
repository = "https://github.com/nautilus-fuzz/nautilus"

[dependencies]
nix = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock"]}
grammartec = {path = "../grammartec", version = "0.3"}
forksrv =  {path = "../forksrv", version = "0.3"}
libc = "0.2"
# ron complains with serde version <= 1.0.102
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
clap = "4.0"
pyo3 = "0.18"

[[bin]]
name = "fuzzer"
path = "src/main.rs"

[[bin]]
name = "generator"
path = "src/generator.rs"

[[bin]]
name = "mutator"
path = "src/mutation_tester.rs"
