[package]
name = "grammartec"
version = "0.2.0"
authors = ["coco <coco@hexgolems.com>"]
description = "The Nautilus grammartec"
license = "AGPL-3.0"
repository = "https://github.com/nautilus-fuzz/nautilus"
readme = "../README.md"

[dependencies]
regex = "1.6"
lazy_static= "1.4"
rand = "0.8"
hash_by_ref = "0.1.0"
regex_mutator = {path = "../regex_mutator", version = "0.2"}
regex-syntax = "0.6"
serde = { version = "1.0", features = ["derive"] }
loaded_dice = "0.2.2"
num = "0.4"
pyo3 = "0.17"
