[package]
name = "grammartec"
version = "0.2.0"
authors = ["coco <coco@hexgolems.com>"]
rust-version.workspace = true
description = "The Nautilus grammartec"
license = "AGPL-3.0"
repository = "https://github.com/nautilus-fuzz/nautilus"
readme = "../README.md"

[dependencies]
regex = "1.3.7"
lazy_static= "1.4.0"
rand = "0.8"
hash_by_ref = "0.1.0"
regex_mutator = {path = "../regex_mutator", version = "0.2"}
regex-syntax = "0.6.17"
serde_derive = "1.0"
serde = "1.0"
loaded_dice = "0.2.2"
num = "0.4"
pyo3 = "0.17"
