[package]
name = "grammartec"
version = "0.3.1"
authors = ["coco <coco@hexgolems.com>"]
description = "The Nautilus grammartec"
license = "AGPL-3.0"
repository = "https://github.com/nautilus-fuzz/nautilus"
readme = "../README.md"

[dependencies]
regex = "1"
lazy_static= "1"
rand = "0.8"
regex_mutator = {path = "../regex_mutator", version = "0.3"}
regex-syntax = "0.6"
serde = { version = "1", features = ["derive"] }
loaded_dice = "0.2.2"
num = "0.4"
pyo3 = "0.18"
