[package]
name = "regex_mutator"
version = "0.2.0"
authors = ["coco <cornelius@hexgolems.com>"]
rust-version.workspace = true
description = "The Nautilus regex_mutator"
license = "AGPL-3.0"
repository = "https://github.com/nautilus-fuzz/nautilus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-syntax = "0.6.17"
